# Kiwad-Reader-V2

./: README.md  index.html  package.json  pnpm-lock.yaml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: downloader.rs  fetcher.rs  main.rs
src/components/: FileList.tsx  ListItem.tsx  LoadingBar.tsx  RevisionSelection.tsx  RevisionView.tsx  SelectedItem.tsx
src/interfaces/: File.ts
src/scss/: App.scss  FileList.scss  RevisionSelectionScreen.scss  RevisionView.scss  SelectedItem.scss
