[package]
name = "kiwad-reader"
version = "0.0.0"
description = "A Tauri App"
authors = ["Phill030"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.12"
tokio = { version = "1.37.0", features = ["full"] }
quickxml_to_serde = "0.6.0"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
